[gd_scene load_steps=6 format=3 uid="uid://cfy32p1gvb8uq"]

[ext_resource type="Texture2D" uid="uid://brkdlihk27m7u" path="res://assets/ui/buttons/Button_Blue_3Slides.png" id="1_1g8jr"]
[ext_resource type="Script" uid="uid://bmsgdpdf13vwv" path="res://scenes/ui/main_menu.gd" id="1_x2yvf"]
[ext_resource type="Texture2D" uid="uid://ost8nimj8jgv" path="res://assets/ui/buttons/Button_Blue_3Slides_Pressed.png" id="2_m1kxf"]
[ext_resource type="Texture2D" uid="uid://dt4vws10q8pqu" path="res://assets/ui/buttons/Button_Hover_3Slides.png" id="3_x2yvf"]
[ext_resource type="FontFile" uid="uid://d00h4ctsh5ohj" path="res://assets/fonts/PirataOne-Regular.ttf" id="5_uhagc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2yvf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 1080.0
theme_override_constants/separation = 25
alignment = 1

[node name="NewGame" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_1g8jr")
texture_pressed = ExtResource("2_m1kxf")
texture_hover = ExtResource("3_x2yvf")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/NewGame"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.69411767)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("5_uhagc")
theme_override_font_sizes/font_size = 60
text = "New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_1g8jr")
texture_pressed = ExtResource("2_m1kxf")
texture_hover = ExtResource("3_x2yvf")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Settings"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.69411767)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("5_uhagc")
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="About" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_1g8jr")
texture_pressed = ExtResource("2_m1kxf")
texture_hover = ExtResource("3_x2yvf")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/About"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -134.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.69411767)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("5_uhagc")
theme_override_font_sizes/font_size = 60
text = "About
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_1g8jr")
texture_pressed = ExtResource("2_m1kxf")
texture_hover = ExtResource("3_x2yvf")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Exit"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.69411767)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("5_uhagc")
theme_override_font_sizes/font_size = 60
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
